--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./style.css" />
-		<script src="./app.js" defer></script>
-		<title>Project - Tic Tac Toe</title>
-	</head>
-	<body>
-		<div id="root"></div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./app.js" defer></script>
+    <title>Project - Tic Tac Toe</title>
+  </head>
+  <body>
+    <div id="root">
+      <header class="header">
+        <h1 class="header__logo">Another Boring Tic Tac Toe</h1>
+      </header>
+      <div class="game__container"></div>
+      <footer class="footer">
+        <p class="footer__copy">&copy; Paul Calzado</p>
+      </footer>
+    </div>
+  </body>
 </html>
